assets/theme-css/styles.css
body {
  color: var(--colorText);
  font-family: var(--fontFamily), sans-serif;
}

code {
  font-size: 0.85em;
  padding: 0.15em;
}

em {
  color: var(--colorText);
}

hr {
  background-color: var(--colorSecondaryDark);
}

pre {
  margin-top: 1em;
  margin-bottom: 1em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  padding-left: 0.5em;
  padding-right: 0.5em;
}

table th {
  /* Overriding bulma. */
  color: var(--colorTextAlt);
}

/* This color came from uikit; we re-specify it here
   to show how to override it for the content section */
.content-padding a {
  color: var(--colorContentLink);
}

.flex-row {
  display: flex;
  flex-direction: row;
}

.flex-column {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-left: 0.5em;
}

.hero-container {
  width: 100vw;
}

.hero-content {
  display: flex;
  flex-direction: column;
}

.hero-title-content {
  align-items: center;
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
}

.hero-headline {
  display: flex;
  flex-direction: row;
}

.hero-title {
  align-items: center;
  display: flex;
  flex-direction: row;
  font-family: var(--fontFamily), sans-serif;
  font-weight: 900;
  font-size: 6em;
  color: var(--colorText);
  justify-content: center;
  margin-left: 1em;
  margin-bottom: 0.2em;
  margin-right: 0.5em;
}

.hero-logo {
  align-self: start;
  margin: 0.1em;
  margin-left: 0.25em;
  max-height: 0.8em;
}

.hero-subtitle {
  color: var(--colorText);
  font-size: 1em;
  max-width: 550px;
}

.hero-cta {
  padding: 15px 0;
  display: flex;
  flex-wrap: wrap;
  align-self: center;
}

.cta-button {
  margin-right: 1em;
  min-width: 15rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  width: auto;
  height: 3rem;
  font-size: 0.7rem;
  text-transform: uppercase;
  letter-spacing: 1.5px;
  font-weight: 500;
  color: var(--colorTextInverse);
  background-color: var(--colorBackgroundInverse);
  border: none;
  border-radius: 25px;
  outline: none;
  cursor: pointer;
}

#feature-card {
  height: 475px;
}
#backtotop.visible #backtotop-color:hover {
  background: var(--colorHighlight);
}

.mt-30 {
  margin-top: 30px;
}

h2 {
  font-size: 1.5em;
  font-weight: bold;
  padding-top: 15px;
}

h3 {
  font-size: 1.2em;
  font-weight: bold;
  padding-top: 10px;
}

p {
  padding-top: 5px;
}

.content-container ul {
  list-style-type: circle;
  padding: 10px;
  margin-left: 15px;
}

.content-container ol {
  padding: 10px;
  margin-left: 15px;
}

@media only screen and (max-width: 1090px) {
  .hero-content {
    flex-direction: column;
    padding: 0;
    align-items: center;
  }

  .hero-title-content {
    flex-direction: column;
    align-items: center;
  }
}

@media only screen and (max-width: 600px) {
  .flex-column {
    margin: 0 30px;
  }

  .hero-title {
    font-size: 4em;
  }
}

@media only screen and (max-width: 400px) {
  .hero-title {
    flex-direction: column;
  }
}

/* Footer */
#footer {
  background-color: var(--colorPrimaryDark);
}

.footer-logo-column {
  padding: 20px 5vw;
  font-size: 1rem;
}

#footer-logo {
  height: 75px;
}

.footer-column {
  padding-left: 0px;
  margin-top: 20px;
}

#footer-columns > div > div > ul {
  padding-left: 0px;
}

.link-column {
  display: block;
  flex-basis: 0;
  flex-grow: 1;
  flex-shrink: 1;
}

.footer-link,
.footer-link:hover {
  font-size: 1rem;
  color: var(--colorSecondary);
}

.footer-actions {
  max-width: 25vw;
  margin: 20px 25px;
}

.footer-actions > p {
  padding-top: 0;
}

.footer-actions p {
  margin: 0;
  color: var(--colorSecondary);
}

.icon {
  color: var(--colorIcon);
}

.copyright {
  font-size: 12px;
  color: var(--colorSecondary);
}

figcaption {
  text-align: center;
}

.csfigcaption {
  text-align: center;
}

.fig-center {
  text-align: center;
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 80%;
}

blockquote {
  border-left: 6px solid var(--colorSecondary);
  margin-top: 1rem;
  margin-bottom: 1rem;
}

blockquote p {
  padding-left: 1rem;
  padding-right: 1rem;
}

@media only screen and (max-width: 850px) {
  #footer-columns {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  .footer-actions {
    max-width: 50vw;
  }

  .community-icons {
    width: 100%;
  }
}

/* Icon size for the whole document */
svg.icon {
  height: 0.75em;
  width: 0.75em;
  vertical-align: middle;
}

#footer .community-icons {
  /* Icon size slightly enlargened for footer */
  font-size: 2.3em;
}

#footer .community-icons a {
  display: inline-block;
}

#footer svg.icon {
  fill: var(--colorSecondary);
  margin-right: 0.5rem;
}

#footer svg.icon:hover {
  fill: #ffffff;
}

/* For information ⓘ, when icon is missing */
#footer .icon {
  font-weight: 900;
  color: var(--colorSecondary);
}

.chroma {
  padding: 10px;
}

/* navbar */

nav,
.navbar {
  background: var(--colorBackground);
  color: var(--colorText);
}
.navbar-burger {
  color: var(--colorTextAlt);
}
.navbar-burger:hover {
  color: var(--colorPrimaryLight);
}
.navbar-item {
  color: var(--colorTextAlt);
}
.navbar-menu.is-active {
  background: var(--colorBackgroundAlt2);
}

a.navbar-item,
a.navbar-item:visited {
  color: var(--colorText);
  text-decoration: none;
}

a.navbar-item:hover {
  color: var(--colorPrimaryLight);
}

.navbar-logo {
  height: 28px;
  padding-right: 1rem;
}

.navbar-logo-text {
  color: var(--colorText);
  font-size: 1.25rem;
  font-weight: bold;
}

.navbar.is-fresh .navbar-item.has-dropdown .navbar-dropdown {
  border-top-color: var(--colorPrimaryDark);
}

.navbar.is-fresh .navbar-item.has-dropdown:hover .navbar-link {
  color: var(--colorPrimaryDark);
}

.navbar.is-fresh .navbar-item.has-dropdown:hover .navbar-link:after {
  border-color: var(--colorPrimaryDark);
}

.footer nav {
  background: var(--colorPrimaryDark);
}

/* Local Variables: */
/* css-indent-offset: 2 */
/* End: */

